Opened 17 years ago

Closed 17 years ago

#1861 closed bug (fixed)

Network card incorrectly configured

Reported by: jackburton Owned by: axeld
Priority: normal Milestone: R1
Component: Network & Internet/Stack Version: R1/pre-alpha1
Keywords: Cc: andreasf
Blocked By: Blocking:
Platform: All

Description

No matter if I test on vmware with the ipro1000 NIC, or on my laptop with the sis900 NIC (see also #1744), I can't configure the network card correctly (anymore, in case of vmware). And no matter if I use ifconfig or the network preflet.

I'm trying to configure the NIC like this: IP: 192.168.22.39 Mask: 255.255.255.0 Gateway: 192.168.22.9

After the configuration, ifconfig shows: inet addr: 192.168.22.39, Bcast: 192.168.0.255, Mask: 255.255.255.0

but Bcast should be 192.168.22.255.

Change History (3)

comment:1 by andreasf, 17 years ago

Cc: andreasf added

I've noticed this, too.

As a workaround, just restart and it will pick up the new broadcast address.

comment:2 by axeld, 17 years ago

You currently have to configure the broadcast manually, ie. like: $ ifconfig /dev/net/sis900/0 broadcast 192.168.22.255

But I guess this can be considered a bug, anyway ;-)

comment:3 by axeld, 17 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev24170. Before, only the net_server and ifconfig updated the broadcast, but only when there was no broadcast address set yet.

The downside to this approach is that you now lose the broadcast/netmask setting every time you change your IP address or netmask. But that should be okay, since you usually set them all at once, anyway.

Note: See TracTickets for help on using tickets.