* Added a set_to_defaults() function to the address module: it can be used   to retrieve the default settings for the netmask/broadcast depending on the   specified address/netmask. * interface_protocol_control() now uses this to reset the broadcast/netmask   to their default values on SIOCSIFADDR resp. the former only on   SIOCSIFNETMASK. * This fixes bug #1861.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@24170 a95241bf-73f2-0310-859d-f6bbb57e9c96